--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,7 @@ APP_KEYS=Pp0xQSsamlt9qneNA9f8zw==,y0a8Oc5jpxJ0r4UJ3+rZIw==,XUp8CRXDsFpj1XGCEwN+O
 API_TOKEN_SALT=7I7IejpR75otvc0uue7bLA==
 ADMIN_JWT_SECRET=pVrjBDWbbEdW5sN90YtwPg==
 TRANSFER_TOKEN_SALT=Q3t0PuAghx+WmZPYBjIM0Q==
+JWT_SECRET=/xvA/8TwJcOR1wvXkti1vA==
 # Database
 
 
